#add_executable(typedef Magics/alias/typedef.cpp)
#add_executable(stack Magics/stack.cpp)
#add_executable(hasptr Chapter13/13.1/13.5.cpp)
#add_executable(sort Interview/interview/ali/sort.cpp)
#add_executable(new_sort Interview/interview/ali/new_sort.cpp)
#add_executable(myString Interview/cpp/myString.cpp)
#add_executable(1 Modern_CPP/chapter2/combined_struct.cpp)
#add_executable(structured.binding Modern_CPP/chapter2/structured.binding.cpp)
#add_executable(combined_struct Modern_CPP/chapter2/combined_struct.cpp)
add_executable(enhance random/MoveSemantics/enhance.cpp)
add_executable(special CPP_Primer/Chapter16/16.5/specialization.cpp)
